@@ -188,6 +188,7 @@
  * 07-Jun-2007 : Modified drawBackground() to pass orientation to 
  *               fillBackground() for handling GradientPaint (DG);
  * 24-Sep-2007 : Added new zoom methods (DG);
+ * 26-Sep-2007 : Include index value in IllegalArgumentExceptions (DG);
  *
  */
 
@@ -2019,8 +2020,8 @@ public class XYPlot extends Plot implements ValueAxisPlot,
      */
     public Paint getQuadrantPaint(int index) {
         if (index < 0 || index > 3) {
-            throw new IllegalArgumentException(
-                    "The index should be in the range 0 to 3.");
+            throw new IllegalArgumentException("The index value (" + index 
+                    + ") should be in the range 0 to 3.");
         }
         return this.quadrantPaint[index];
     }
@@ -2036,8 +2037,8 @@ public class XYPlot extends Plot implements ValueAxisPlot,
      */
     public void setQuadrantPaint(int index, Paint paint) {
         if (index < 0 || index > 3) {
-            throw new IllegalArgumentException(
-                    "The index should be in the range 0 to 3.");
+            throw new IllegalArgumentException("The index value (" + index 
+                    + ") should be in the range 0 to 3.");
         }
         this.quadrantPaint[index] = paint;
         notifyListeners(new PlotChangeEvent(this));
@@ -3145,7 +3146,8 @@ public class XYPlot extends Plot implements ValueAxisPlot,
     public ValueAxis getDomainAxisForDataset(int index) {
 
         if (index < 0 || index >= getDatasetCount()) {
-            throw new IllegalArgumentException("Index 'index' out of bounds.");
+            throw new IllegalArgumentException("Index " + index 
+                    + " out of bounds.");
         }
 
         ValueAxis valueAxis = null;
@@ -3171,7 +3173,8 @@ public class XYPlot extends Plot implements ValueAxisPlot,
     public ValueAxis getRangeAxisForDataset(int index) {
 
         if (index < 0 || index >= getDatasetCount()) {
-            throw new IllegalArgumentException("Index 'index' out of bounds.");
+            throw new IllegalArgumentException("Index " + index 
+                    + " out of bounds.");
         }
 
         ValueAxis valueAxis = null;
